<?xml version="1.0"?>
<package format="3">
  <name>touch_car_description</name>
  <version>0.1.0</version>
  <description>URDF/Xacro model for a 15 cm three-wheel touch bumper car.</description>
  <maintainer email="user@example.com">ws_car_1 user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
