<?xml version="1.0"?>
<package format="3">
  <name>touch_car_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo room world and launch files for the touch bumper car.</description>
  <maintainer email="user@example.com">ws_car_1 user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>touch_car_control</exec_depend>
  <exec_depend>touch_car_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
